2011-10-11  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/RemoteProxyManager.java (getLauncher): Add
	missing logic for RDT projects.
	(getOS): Ditto.
	(RDT_SYNC_NATURE): New nature to look for.
	(getFileProxy): Add support for RDT_SYNC_NATURE.

2011-10-07  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/RemoteProxyManager.java (getRemoteManager): Fill in
	logic to use RemoteProxyManager extension.
	* src/org/eclipse/linuxtools/profiling/launch/IRemoteProxyManager.java (EXTENSION_POINT_ID): New field.
	(MANAGER_NAME): Ditto.
	(NATURE_ID): Ditto.
	* build.properties: Add schema and plugin.xml.
	* plugin.xml: New file with RemoteProxyManager extension.
	* META-INF/MANIFEST.MF: Make singleton and bump version.
	* schema/RemoteProxyManager.exsd: New file.

2011-10-07  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Add new dependencies.
	* src/org/eclipse/linuxtools/profiling/launch/RemoteProxyManager.java: New file.
	* src/org/eclipse/linuxtools/profiling/launch/IRemoteProxyManager.java: New file.
	* src/org/eclipse/linuxtools/profiling/launch/IRemoteFileProxy.java: New file.
	* src/org/eclipse/linuxtools/profiling/launch/IRemoteCommandLauncher.java: New file.
	* src/org/eclipse/linuxtools/profiling/launch/IProcess.java: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/LocalProcess.java: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/LocalLauncher.java: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/LocalFileProxy.java: New file.

2010-07-26  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Bump version.
	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchShortcut.java (createConfiguration): Change deprecated method. 

2009-12-08  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationDelegate.java: