@@ -1,18 +1,0 @@
-/*******************************************************************************
- * Copyright (c) 2011 Red Hat Inc..
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *     Red Hat Incorporated - initial API and implementation
- *******************************************************************************/
-package org.eclipse.linuxtools.profiling.launch;
-
-public interface IProcess {
-	  public java.io.OutputStream getOutputStream();
-	  public java.io.InputStream getInputStream();
-	  public java.io.InputStream getErrorStream();
-	  public int exitValue();
-}
